Added nav bar and toggle sidebar

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
   <div class="nav-links-container">
     <a class="nav-link" routerLink="/home" routerLinkActive="list-item-active">
       <mat-icon>home</mat-icon>
-      <p>Home</p>
+      <p class="icon">Home</p>
     </a>
     <a
       class="nav-link"
@@ -16,7 +16,7 @@
       routerLinkActive="list-item-active"
     >
       <mat-icon>dashboard</mat-icon>
-      <p>Dashboard</p>
+      <p class="icon">Dashboard</p>
     </a>
   </div>
 </mat-nav-list>
