Fixed navbar dropdown bar issue

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="toggleSidebar()">
     <mat-icon>menu</mat-icon>
   </button>
-  <div class="row mr-2 ml-auto user">
+  <div class="user-section">
     <button
       mat-button
       [matMenuTriggerFor]="menu"
