--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,7 +24,6 @@ ul {
   margin-top: 9px;
 }
 
-.drop-down-container {
-  align-self: center;
-  background-color: aqua;
+.user-section {
+  margin-bottom: 4px;
 }
