Added reactive form with form controls

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -12,11 +12,11 @@
     </a>
     <a
       class="nav-link"
-      routerLink="/dashboard"
+      routerLink="/listings"
       routerLinkActive="list-item-active"
     >
       <mat-icon>dashboard</mat-icon>
-      <p class="icon">Dashboard</p>
+      <p class="icon">Listings</p>
     </a>
   </div>
 </mat-nav-list>
