--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,6 @@
 :host {
-  // display: flex;
-  // flex-direction: column;
   height: 100%;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
 }
 
 mat-drawer {
