--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,79 +1,87 @@
-<h1 class="form-header">Upload a listing</h1>
-<form [formGroup]="listing" (ngSubmit)="onSubmit()" class="listing-form">
-  <mat-form-field>
-    <mat-label for="listing-title">Listing Title</mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="title"
-      class="listing-title"
-      name="title"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label for="listing-description">Listing Description</mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="description"
-      class="listing-description"
-      name="description"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label for="listing-agent">Agent Name</mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="agentName"
-      class="listing-agent"
-      name="agentName"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label for="listing-address"> Listing Address </mat-label>
-    <input
-      type="text"
-      matInput
-      formControlName="address"
-      class="listing-address"
-      name="address"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label for="listing-bedroom-number">Number of bedrooms</mat-label>
-    <input
-      matInput
-      formControlName="bedrooms"
-      type="number"
-      class="listing-bedroom-number"
-      name="bedrooms"
-      placeholder="1"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label for="listing-washroom-number">Number of washrooms</mat-label>
-    <input
-      matInput
-      formControlName="washrooms"
-      type="number"
-      class="listing-washroom-number"
-      name="washrooms"
-      placeholder="1"
-    />
-  </mat-form-field>
-  <mat-form-field floatLabel="always">
-    <mat-label for="listing-price"> Listing price </mat-label>
-    <input
-      matInput
-      formControlName="price"
-      type="number"
-      class="listing-price"
-      name="price"
-      placeholder="0"
-    />
-    <span matTextPrefix>$&nbsp;</span>
-    <span matTextSuffix>.00</span>
-  </mat-form-field>
-  <button mat-raised-button type="submit">Submit</button>
-</form>
+<mat-card>
+  <mat-card-header>
+    <h1 class="form-header">Upload a listing</h1>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="listing" (ngSubmit)="onSubmit()" class="listing-form">
+      <mat-form-field>
+        <mat-label for="listing-title">Listing Title</mat-label>
+        <input
+          type="text"
+          matInput
+          formControlName="title"
+          class="listing-title"
+          name="title"
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="listing-description">Listing Description</mat-label>
+        <textarea
+          type="text"
+          matInput
+          formControlName="description"
+          class="listing-description"
+          name="description"
+        ></textarea>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="listing-agent">Agent Name</mat-label>
+        <input
+          type="text"
+          matInput
+          formControlName="agentName"
+          class="listing-agent"
+          name="agentName"
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="listing-address"> Listing Address </mat-label>
+        <input
+          type="text"
+          matInput
+          formControlName="address"
+          class="listing-address"
+          name="address"
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="listing-bedroom-number">Number of bedrooms</mat-label>
+        <input
+          matInput
+          formControlName="bedrooms"
+          type="number"
+          class="listing-bedroom-number"
+          name="bedrooms"
+          placeholder="1"
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="listing-washroom-number">Number of washrooms</mat-label>
+        <input
+          matInput
+          formControlName="washrooms"
+          type="number"
+          class="listing-washroom-number"
+          name="washrooms"
+          placeholder="1"
+        />
+      </mat-form-field>
+      <mat-form-field floatLabel="always">
+        <mat-label for="listing-price"> Listing price </mat-label>
+        <input
+          matInput
+          formControlName="price"
+          type="number"
+          class="listing-price"
+          name="price"
+          placeholder="0"
+        />
+        <span matTextPrefix>$&nbsp;</span>
+        <span matTextSuffix>.00</span>
+      </mat-form-field>
+      <button class="listing-submit-button" mat-raised-button type="submit">
+        Submit
+      </button>
+    </form>
+  </mat-card-content>
+</mat-card>
