--- a/src/app/listings/dashboard.component.html
+++ b/src/app/listings/dashboard.component.html
@@ -1,31 +1,31 @@
 <table mat-table [dataSource]="listings" class="listings-table">
   <ng-container matColumnDef="Title" class="">
     <th mat-header-cell *matHeaderCellDef>Listing Title</th>
-    <td mat-cell *matCellDef="let element">{{ element.Title }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
   </ng-container>
   <ng-container matColumnDef="Description">
     <th mat-header-cell *matHeaderCellDef>Listing Description</th>
-    <td mat-cell *matCellDef="let element">{{ element.Description }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
   </ng-container>
   <ng-container matColumnDef="AgentName">
     <th mat-header-cell *matHeaderCellDef>Listing Agent</th>
-    <td mat-cell *matCellDef="let element">{{ element.AgentName }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.agentName }}</td>
   </ng-container>
   <ng-container matColumnDef="Address">
     <th mat-header-cell *matHeaderCellDef>Listing Address</th>
-    <td mat-cell *matCellDef="let element">{{ element.Address }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.address }}</td>
   </ng-container>
   <ng-container matColumnDef="Number of Bedrooms">
     <th mat-header-cell *matHeaderCellDef>Number of Bedrooms</th>
-    <td mat-cell *matCellDef="let element">{{ element.Bedrooms }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.bedrooms }}</td>
   </ng-container>
   <ng-container matColumnDef="Number of Bathrooms">
     <th mat-header-cell *matHeaderCellDef>Number of Bathrooms</th>
-    <td mat-cell *matCellDef="let element">{{ element.Bathrooms }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.bathrooms }}</td>
   </ng-container>
   <ng-container matColumnDef="Price">
     <th mat-header-cell *matHeaderCellDef>Price</th>
-    <td mat-cell *matCellDef="let element">{{ element.Price }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.price }}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
