--- a/src/app/listings/dashboard.component.html
+++ b/src/app/listings/dashboard.component.html
@@ -26,7 +26,31 @@
   </ng-container>
   <ng-container matColumnDef="Price">
     <th mat-header-cell *matHeaderCellDef>Price</th>
-    <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.price }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="ListingOptions">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Menu Button"
+      >
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="handleDeleteListing(element.id)">
+          <mat-icon>delete</mat-icon>
+          <span>Delete</span>
+        </button>
+        <button mat-menu-item (click)="handleEditListing(element.id)">
+          <mat-icon>edit</mat-icon>
+          <span>Edit</span>
+        </button>
+      </mat-menu>
+    </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
