Added new property size form field with respective routing

--- a/src/app/dialogBody/dialogBody.component.html
+++ b/src/app/dialogBody/dialogBody.component.html
@@ -19,6 +19,17 @@
         />
       </mat-form-field>
       <mat-form-field>
+        <mat-label for="listing-title">Property Size</mat-label>
+        <input
+          type="number"
+          matInput
+          formControlName="size"
+          class="listing-size"
+          name="size"
+        />
+        <span matTextSuffix>SqFt</span>
+      </mat-form-field>
+      <mat-form-field>
         <mat-label for="listing-description">Listing Description</mat-label>
         <textarea
           type="text"
